--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
