--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@supabase/supabase-js": "^2.44.2",
-    "@tanstack/react-query": "^5.49.2",
-    "animate.css": "^4.1.1",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "swiper": "^11.1.4",
-    "uuid": "^11.0.2"
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
